<resources>
    <string name="app_name">Pay_The_Bills_9000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">To be implemented</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_insurance">Insurance</string>
    <string name="menu_syn">Syn</string>
    <string name="menu_green_tax">Green Tax</string>
    <string name="title_activity_login">Pay The Bills 9000</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="input_your_license_plate_number">INPUT YOUR LICENSE PLATE NUMBER</string>
    <string name="log_in">Log In</string>
    <string name="invalid_licence_plate">Invalid licence plate</string>
    <string name="insurerAddIns">Insurer</string>
    <string name="select_start_date">Select start date</string>
    <string name="start_date">Start Date</string>
    <string name="stop_dat">Stop Date</string>
    <string name="select_stop_date">Select stop date</string>
    <string name="costInsurance">Cost</string>
    <string name="add_policy">Add Policy</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="valid">Valid</string>
    <string name="syn_shop">Syn Shop</string>
    <string name="select_syn_date">SELECT SYN DATE</string>
    <string name="add_syn">Add Inspection - SYN</string>
    <string name="years">YEARS</string>
    <string name="syn_period">SYN PERIOD</string>
    <string name="passed">Passed</string>
    <string name="error">Error</string>
    <string name="cost">Cost</string>
    <string name="valability">Valability</string>
    <string name="select_tax_date">SELECT TAX DATE</string>
    <string name="months">Months</string>
    <string name="add_green_tax">Add Green Tax</string>
</resources>