<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.Syn.AddSynFragment">

    <View
        android:id="@+id/view3"
        android:layout_width="286dp"
        android:layout_height="556dp"
        android:background="@drawable/border_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="86dp"
        android:layout_height="26dp"
        android:text="@string/syn_shop"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addSynShopName"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.702" />

    <EditText
        android:id="@+id/addSynShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="448dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        android:autofillHints="" />

    <Button
        android:id="@+id/selectSynDate"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:background="#80DEEA"
        android:backgroundTint="#80DEEA"
        android:text="@string/select_syn_date"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/passedSynSwitch"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/addSynShopName" />

    <Switch
        android:id="@+id/passedSynSwitch"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:text="@string/passed"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/addSynShopName"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/addSynButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_syn"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/passedSynSwitch"
        app:layout_constraintVertical_bias="0.501" />

    <Spinner
        android:id="@+id/synYearsSpinner"
        android:layout_width="55dp"
        android:layout_height="29dp"
        android:layout_marginStart="144dp"
        android:dropDownSelector="@color/teal_200"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="screen"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/addSynButton"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/passedSynSwitch"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/synPeriodText"
        android:layout_width="93dp"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:text="@string/syn_period"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addSynButton"
        app:layout_constraintEnd_toStartOf="@+id/synYearsSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/passedSynSwitch"
        app:layout_constraintVertical_bias="0.139" />

    <TextView
        android:id="@+id/synYearsText"
        android:layout_width="48dp"
        android:layout_height="23dp"
        android:text="@string/years"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addSynErrorText"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toEndOf="@+id/synYearsSpinner"
        app:layout_constraintTop_toBottomOf="@+id/passedSynSwitch"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/addSynErrorText"
        android:layout_width="163dp"
        android:layout_height="60dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addSynButton"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/synYearsSpinner"
        app:layout_constraintVertical_bias="0.483" />
</androidx.constraintlayout.widget.ConstraintLayout>