<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.insurance.AddInsurancePolicyFragment" >

    <View
        android:id="@+id/addInsuranceView"
        android:layout_width="317dp"
        android:layout_height="500dp"
        android:background="@drawable/border_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="41dp"
        android:layout_height="28dp"
        android:text="@string/costInsurance"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toStartOf="@+id/addInsCost"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toTopOf="@+id/addInsuranceView"
        app:layout_constraintVertical_bias="0.569" />

    <Button
        android:id="@+id/selectStopDateButton"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:background="#80DEEA"
        android:backgroundTint="#80DEEA"
        android:text="@string/select_stop_date"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/selectStartDateButton"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="35dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:text="@string/stop_dat"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toStartOf="@+id/selectStopDateButton"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:text="@string/insurerAddIns"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toTopOf="@+id/addInsuranceView"
        app:layout_constraintVertical_bias="0.112" />

    <EditText
        android:id="@+id/addInsNameInsurer"
        android:layout_width="184dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A5D6A7"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/addInsCost"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A5D6A7"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/selectStartDateButton"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:background="#80DEEA"
        android:backgroundTint="#80DEEA"
        android:text="@string/select_start_date"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/addInsNameInsurer"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="35dp"
        android:layout_height="43dp"
        android:text="@string/start_date"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toStartOf="@+id/selectStartDateButton"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/addInsNameInsurer"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/addInsPolicyButton"
        android:layout_width="133dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_policy"
        app:layout_constraintBottom_toBottomOf="@+id/addInsuranceView"
        app:layout_constraintEnd_toEndOf="@+id/addInsuranceView"
        app:layout_constraintStart_toStartOf="@+id/addInsuranceView"
        app:layout_constraintTop_toBottomOf="@+id/addInsCost"
        app:layout_constraintVertical_bias="0.149" />


</androidx.constraintlayout.widget.ConstraintLayout>