<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.green_tax.AddGreenTaxFragment">


    <View
        android:id="@+id/view3"
        android:layout_width="286dp"
        android:layout_height="556dp"
        android:background="@drawable/border_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addTaxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:text="@string/add_green_tax"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/selectTaxDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addTaxError"
        android:layout_width="171dp"
        android:layout_height="74dp"
        android:layout_marginBottom="16dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addTaxButton"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/selectTaxDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="27dp"
        android:layout_marginTop="168dp"
        android:text="@string/months"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <Spinner
        android:id="@+id/spinnerAddTaxMonths"
        android:layout_width="98dp"
        android:layout_height="43dp"
        android:dropDownSelector="@color/teal_200"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/selectTaxDate"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.861" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginTop="132dp"
        android:text="@string/valability"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/textView63453"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:text="@string/cost"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />


    <Button
        android:id="@+id/selectTaxDate"
        android:layout_width="215dp"
        android:layout_height="47dp"
        android:background="#80DEEA"
        android:backgroundTint="#80DEEA"
        android:text="@string/select_tax_date"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.438" />

    <EditText
        android:id="@+id/addTaxCost"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A5D6A7"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/selectTaxDate"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textView63453"
        app:layout_constraintVertical_bias="0.076" />

    <Spinner
        android:id="@+id/spinnerCurrencyAddTax"
        android:layout_width="98dp"
        android:layout_height="43dp"
        android:dropDownSelector="@color/teal_200"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#80DEEA"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/selectTaxDate"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toEndOf="@+id/addTaxCost"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.253" />


</androidx.constraintlayout.widget.ConstraintLayout>