<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="313dp"
        android:layout_height="445dp"
        android:background="@drawable/border_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFAB91"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-black"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textColorHint="#EDE3E3"
        android:textSize="18sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/textViewLogIn"
        android:layout_width="278dp"
        android:layout_height="90dp"
        android:text="@string/input_your_license_plate_number"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.191" />

    <EditText
        android:id="@+id/licencePlateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A5D6A7"
        android:textDirection="firstStrongRtl"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogIn"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/invalidLicenceText"
        android:layout_width="171dp"
        android:layout_height="22dp"
        android:text="@string/invalid_licence_plate"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logInButton"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/licencePlateInput" />
</androidx.constraintlayout.widget.ConstraintLayout>